# cwipc_codec

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
apps/cwipc_codec_install_check/: CMakeLists.txt  cwipc_codec_install_check.cpp
apps/cwipc_decode/: CMakeLists.txt  cwipc_decode.cpp
apps/cwipc_enc_perftest/: CMakeLists.txt  cwipc_enc_perftest.cpp
apps/cwipc_encode/: CMakeLists.txt  cwipc_encode.cpp
apps/evaluate_compression/: CMakeLists.txt
apps/evaluate_compression/include/pcl/apps/evaluate_compression/impl/: evaluate_compression_impl.hpp  quality_metrics_impl.hpp
apps/evaluate_compression/src/: evaluate_compression.cpp  quality_metrics.cpp
cloud_codec_v2/: CMakeLists.txt
cloud_codec_v2/include/pcl/cloud_codec_v2/: color_coding_jpeg.h  jpeg_io.h  point_cloud_codec_v2.h  point_cloud_codec_v2_omp.h  point_coding_v2.h  rigid_transform_coding.h  snake_grid_mapping.h
cloud_codec_v2/include/pcl/cloud_codec_v2/impl/: point_cloud_codec_v2_impl.hpp  quaternion_coding_impl.hpp
cmake/Modules/: FindJPEG_Turbo.cmake
include/cwipc_codec/: api.h
python/: CMakeLists.txt  pyproject.toml  setup.py  test_cwipc_codec.py
python/_cwipc_codec/: __init__.py
src/: CMakeLists.txt  cwipc_codec.cpp  cwipc_codec_config.h  cwipc_pcl_additions.cpp
tests/: CMakeLists.txt
